--- a/src/languages/russian.json
+++ b/src/languages/russian.json
@@ -1,54 +1,54 @@
-const russian = {
-  words: {
-		"и": "and, though	conjunction",
- 		"в": "in, at	preposition",
- 		"не": "not particle",
- 		"он": "he	pronoun",
- 		"на": "on, it, at, to	preposition",
- 		"я": "I	pronoun",
- 		"что": "	what, that, why	сonjunction, pronoun",
- 		"тот": "that	adjective, pronoun",
- 		"быть": "to be	verb",
- 		"с": "with, and, from, of	preposition",
- 		"а": "	while, and, but	conjunction",
- 		"весь": "all, everything	pron, noun",
- 		"это": "that, this, it	pronoun",
- 		"как": "how, what, as, like	adverb, conj",
- 		"она": "she	pronoun",
- 		"по": "on, along, by	preposition",
- 		"но": "but	conjunction, noun",
-    "они": "	they	pronoun",		
-    "к": "to, for, by	preposition",
-		"у": "by, with, of	preposition",
-		"ты": "you, thou	pronoun",
-		"из": "from, of, in	preposition",
-		"мы": "we	pronoun",
-		"за": "behind, over, at, after	preposition",
-		"вы": "you	pronoun",
-		"так": "so, thus, then	adverb",
-		"же":	"and, as for, but, same	conj, particle",
-		"от": "from, of, for	preposition",
-		"сказать": "to say, to speak	verb",
-		"этот": "this	pronoun",
-		"который": "which, who, that	pronoun",
-		"мочь": "be able	verb",
-		"человек": "man, person	noun",
-		"о": "of, about, against	preposition",
-		"один": "one, some, alone	cardinal number, pronoun",
-		"ещё": "still, yet	adverb",
-		"бы": "would	particle",
-		"такой": "such, so, some	pronoun",
-		"только": "only, merely, but	adverb, conj",
-		"себя": "myself, himself, herself	pron, particle",
-		"своё": "one's own, my, our	pronoun, noun",
-		"какой": "what, which, how	pronoun",
-		"когда": "when, while, as	adverb, conj",
-		"уже": "	already, by now	adverb",
-		"для": "for, to	preposition",
-		"вот": "here, there, this is, that's	particle",
-		"кто": "who, that, some	pronoun",
-		"да": "yes, but	conj, particle",
-		"говорить": "to say, to tell, to speak	verb",
-		"год": "year	noun"
+{
+  "words": {
+		"и": "and, though",
+ 		"в": "in, at",
+ 		"не": "not",
+ 		"он": "he",
+ 		"на": "on, it, at, to",
+ 		"я": "I",
+ 		"что": "what, that, why",
+ 		"тот": "that",
+ 		"быть": "to be",
+ 		"с": "with, and, from, of",
+ 		"а": "while, and, but",
+ 		"весь": "all, everything",
+ 		"это": "that, this, it",
+ 		"как": "how, what, as, like",
+ 		"она": "she",
+ 		"по": "on, along, by",
+ 		"но": "but",
+    "они": "they",		
+    "к": "to, for, by",
+		"у": "by, with, of",
+		"ты": "you, thou",
+		"из": "from, of, in",
+		"мы": "we",
+		"за": "behind, over, at, after",
+		"вы": "you",
+		"так": "so, thus, then",
+		"же":	"and, as for, but, same",
+		"от": "from, of, for",
+		"сказать": "to say, to speak",
+		"этот": "this",
+		"который": "which, who, that",
+		"мочь": "be able",
+		"человек": "man, person",
+		"о": "of, about, against",
+		"один": "one, some",
+		"ещё": "still, yet",
+		"бы": "would",
+		"такой": "such, so, some",
+		"только": "only, merely, but",
+		"себя": "myself, himself, herself",
+		"своё": "one's own, my, our",
+		"какой": "what, which, how",
+		"когда": "when, while, as",
+		"уже": "already, by now",
+		"для": "for, to",
+		"вот": "here, there, this is, that's",
+		"кто": "who, that, some",
+		"да": "yes, but",
+		"говорить": "to say, to tell, to speak",
+		"год": "year"
   }
-};
+}
