problems fixed arising from data being displayed as objects

--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -1,51 +1,49 @@
-{
-   "words": {
-      "time": "null",
-      "person": "null",
-      "year": "null",
-      "way": "null",
-      "day": "null",
-      "thing": "null",
-      "man": "null",
-      "world": "null",
-      "life": "null",
-      "hand": "null",
-      "part": "null",
-      "child": "null",
-      "eye": "null",
-      "woman": "null",
-      "place": "null",
-      "work": "null",
-      "week": "null",
-      "case": "null",
-      "point": "null",
-      "government": "null",
-      "company": "null",
-      "number": "null",
-      "group": "null",
-      "problem": "null",
-      "face": "null",
-      "be": "null",
-      "have": "null",
-      "do": "null",
-      "say": "null",
-      "get": "null",
-      "make": "null",
-      "go": "null",
-      "know": "null",
-      "take": "null",
-      "see": "null",
-      "come": "null",
-      "think": "null",
-      "look": "null",
-      "want": "null",
-      "give": "null",
-      "use": "null",
-      "find": "null",
-      "tell": "null",
-      "ask": "null",
-      "seem": "null",
-      "feel": "null",
-      "try": "null"
-  }
-}
+[
+   {"word": "time", "translation": "null"},
+   {"word": "person", "translation": "null"},
+   {"word": "year", "translation": "null"},
+   {"word": "way", "translation": "null"},
+   {"word": "day", "translation": "null"},
+   {"word": "thing", "translation": "null"},
+   {"word": "man", "translation": "null"},
+   {"word": "world", "translation": "null"},
+   {"word":  "life", "translation": "null"},
+   {"word": "hand", "translation": "null"},
+   {"word": "part", "translation": "null"},
+   {"word": "child", "translation": "null"},
+   {"word": "eye", "translation": "null"},
+   {"word": "woman", "translation": "null"},
+   {"word": "place", "translation": "null"},
+   {"word": "work", "translation": "null"},
+   {"word": "week", "translation": "null"},
+   {"word": "case", "translation": "null"},
+   {"word": "point", "translation": "null"},
+   {"word": "government", "translation": "null"},
+   {"word": "company", "translation": "null"},
+   {"word": "number", "translation": "null"},
+   {"word": "group", "translation": "null"},
+   {"word": "problem", "translation": "null"},
+   {"word": "face", "translation": "null"},
+   {"word": "be", "translation": "null"},
+   {"word": "have", "translation": "null"},
+   {"word": "do", "translation": "null"},
+   {"word": "say", "translation": "null"},
+   {"word": "get", "translation": "null"},
+   {"word": "make", "translation": "null"},
+   {"word": "go", "translation": "null"},
+   {"word": "know", "translation": "null"},
+   {"word": "take", "translation": "null"},
+   {"word": "see", "translation": "null"},
+   {"word": "come", "translation": "null"},
+   {"word": "think", "translation": "null"},
+   {"word": "look", "translation": "null"},
+   {"word": "want", "translation": "null"},
+   {"word": "give", "translation": "null"},
+   {"word": "use", "translation": "null"},
+   {"word": "find", "translation": "null"},
+   {"word": "tell", "translation": "null"},
+   {"word": "ask", "translation": "null"},
+   {"word": "seem", "translation": "null"},
+   {"word": "feel", "translation": "null"},
+   {"word": "try","translation": "null"}
+]
