--- a/src/languages/russian.json
+++ b/src/languages/russian.json
@@ -1,54 +1,52 @@
-{
-  "words": {
-		"и": "and, though",
- 		"в": "in, at",
- 		"не": "not",
- 		"он": "he",
- 		"на": "on, it, at, to",
- 		"я": "I",
- 		"что": "what, that, why",
- 		"тот": "that",
- 		"быть": "to be",
- 		"с": "with, and, from, of",
- 		"а": "while, and, but",
- 		"весь": "all, everything",
- 		"это": "that, this, it",
- 		"как": "how, what, as, like",
- 		"она": "she",
- 		"по": "on, along, by",
- 		"но": "but",
-    "они": "they",		
-    "к": "to, for, by",
-		"у": "by, with, of",
-		"ты": "you, thou",
-		"из": "from, of, in",
-		"мы": "we",
-		"за": "behind, over, at, after",
-		"вы": "you",
-		"так": "so, thus, then",
-		"же":	"and, as for, but, same",
-		"от": "from, of, for",
-		"сказать": "to say, to speak",
-		"этот": "this",
-		"который": "which, who, that",
-		"мочь": "be able",
-		"человек": "man, person",
-		"о": "of, about, against",
-		"один": "one, some",
-		"ещё": "still, yet",
-		"бы": "would",
-		"такой": "such, so, some",
-		"только": "only, merely, but",
-		"себя": "myself, himself, herself",
-		"своё": "one's own, my, our",
-		"какой": "what, which, how",
-		"когда": "when, while, as",
-		"уже": "already, by now",
-		"для": "for, to",
-		"вот": "here, there, this is, that's",
-		"кто": "who, that, some",
-		"да": "yes, but",
-		"говорить": "to say, to tell, to speak",
-		"год": "year"
-  }
-}
+[
+  	{"word": "и", "translation": "and, though"},
+ 		{"word": "в", "translation": "in, at"},
+ 		{"word": "не", "translation": "not"},
+ 		{"word": "он", "translation": "he"},
+ 		{"word": "на", "translation": "on, it, at, to"},
+ 		{"word": "я", "translation": "I"},
+ 		{"word": "что", "translation": "what, that, why"},
+ 		{"word": "тот", "translation": "that"},
+ 		{"word": "быть", "translation": "to be"},
+ 		{"word": "с", "translation": "with, and, from, of"},
+ 		{"word": "а", "translation": "while, and, but"},
+ 		{"word": "весь", "translation": "all, everything"},
+ 		{"word": "это", "translation": "that, this, it"},
+ 		{"word": "как", "translation": "how, what, as, like"},
+ 		{"word": "она", "translation": "she"},
+ 		{"word": "по", "translation": "on, along, by"},
+ 		{"word": "но", "translation": "but"},
+    {"word": "они", "translation": "they"},		
+    {"word": "к", "translation": "to, for, by"},
+		{"word": "у", "translation": "by, with, of"},
+		{"word": "ты", "translation": "you, thou"},
+		{"word": "из", "translation": "from, of, in"},
+		{"word": "мы", "translation": "we"},
+		{"word": "за", "translation": "behind, over, at, after"},
+		{"word": "вы", "translation": "you"},
+		{"word": "так", "translation": "so, thus, then"},
+		{"word": "же", "translation":	"and, as for, but, same"},
+		{"word": "от", "translation": "from, of, for"},
+		{"word": "сказать", "translation": "to say, to speak"},
+		{"word": "этот", "translation": "this"},
+		{"word": "который", "translation": "which, who, that"},
+		{"word": "мочь", "translation": "be able"},
+		{"word": "человек", "translation": "man, person"},
+		{"word": "о", "translation": "of, about, against"},
+		{"word": "один", "translation": "one, some"},
+		{"word": "ещё", "translation": "still, yet"},
+		{"word": "бы", "translation": "would"},
+		{"word": "такой", "translation": "such, so, some"},
+		{"word": "только", "translation": "only, merely, but"},
+		{"word": "себя", "translation": "myself, himself, herself"},
+		{"word": "своё", "translation": "one's own, my, our"},
+		{"word": "какой", "translation": "what, which, how"},
+		{"word": "когда", "translation": "when, while, as"},
+		{"word": "уже", "translation": "already, by now"},
+		{"word": "для", "translation": "for, to"},
+		{"word": "вот", "translation": "here, there, this is, that's"},
+		{"word": "кто", "translation": "who, that, some"},
+		{"word": "да", "translation": "yes, but"},
+		{"word": "говорить", "translation": "to say, to tell, to speak"},
+		{"word": "год", "translation": "year"}
+]
