--- a/src/languages/spanish.json
+++ b/src/languages/spanish.json
@@ -1,50 +1,47 @@
-{
-  "words": {
-    "más": "more",
-    "este": "this",
-	  "todo": "every",
-	  "esta":	"this",
-    "todos": "every",
-    "bien": "fine, well",
-    "mismo":	"same",
-    "otro":	"other, another",
-    "esa": "that",
-    "gran":	"great, big",
-    "menos": "less, fewer",
-    "no":	"no; not",
-    "ya":	"already; still",
-    "también": "too, also, as well",
-    "muy": "very",
-    "sólo": "only, solely",
-    "así":	"like that",
-    "ahora":	"now",
-    "tan": "so",
-    "siempre":	"always",
-    "el":	"the",
-    "un":	"a, an",
-    "una": "a, an, one",
-    "es":	"is",
-	  "ha":	"he/ she / it has [done something]; you(formal) have[done something]",
-	  "ser":	"to be",
-	  "son":	"they are, you(pl.) are",
-	  "fue":	"was",
-	  "había":	"I / he / she / it / there was(or used to be)",
-	  "era":	"was",
-	  "está":		"is",
-	  "han":	"they / you(pl.) have[done something]",
-	  "hay":	"there is / are",
-	  "puede":	"can",
-	  "tiene":	"has",
-	  "hace":	"he / she / it does / makes",
-	  "dijo":	"said; told",
-    "años": "years",
-    "tiempo": "time; weather",
-    "gobierno": "government",
-    "día":	"day",
-    "país": "country",
-    "parte": "part; message",
-    "vez":	"time, instance",
-    "vida": "life"
-  }
-}
-
+[
+    {"word": "más", "translation": "more"},
+    {"word": "este", "translation": "this"},
+	  {"word": "todo", "translation": "every"},
+	  {"word": "esta", "translation":	"this"},
+    {"word": "todos", "translation": "every"},
+    {"word": "bien", "translation": "fine, well"},
+    {"word": "mismo", "translation":	"same"},
+    {"word": "otro", "translation":	"other, another"},
+    {"word": "esa", "translation": "that"},
+    {"word": "gran", "translation":	"great, big"},
+    {"word": "menos", "translation": "less, fewer"},
+    {"word": "no", "translation":	"no; not"},
+    {"word": "ya", "translation":	"already; still"},
+    {"word": "también", "translation": "too, also, as well"},
+    {"word": "muy", "translation": "very"},
+    {"word": "sólo", "translation": "only, solely"},
+    {"word": "así", "translation":	"like that"},
+    {"word": "ahora", "translation":	"now"},
+    {"word": "tan", "translation": "so"},
+    {"word": "siempre", "translation":	"always"},
+    {"word": "el", "translation":	"the"},
+    {"word": "un", "translation":	"a, an"},
+    {"word": "una", "translation": "a, an, one"},
+    {"word": "es", "translation":	"is"},
+	  {"word": "ha", "translation":	"he/ she / it has [done something]; you(formal) have[done something]"},
+	  {"word": "ser", "translation":	"to be"},
+	  {"word": "son", "translation":	"they are, you(pl.) are"},
+	  {"word": "fue", "translation":	"was"},
+	  {"word": "había", "translation":	"I / he / she / it / there was(or used to be)"},
+	  {"word": "era", "translation":	"was"},
+	  {"word": "está", "translation":		"is"},
+	  {"word": "han", "translation":	"they / you(pl.) have[done something]"},
+	  {"word": "hay", "translation":	"there is / are"},
+	  {"word": "puede", "translation":	"can"},
+	  {"word": "tiene", "translation":	"has"},
+	  {"word": "hace", "translation":	"he / she / it does / makes"},
+	  {"word": "dijo", "translation":	"said; told"},
+    {"word": "años", "translation": "years"},
+    {"word": "tiempo", "translation": "time; weather"},
+    {"word": "gobierno", "translation": "government"},
+    {"word": "día", "translation":	"day"},
+    {"word": "país", "translation": "country"},
+    {"word": "parte", "translation": "part; message"},
+    {"word": "vez", "translation":	"time, instance"},
+    {"word": "vida", "translation": "life"}
+]
