--- a/src/languages/chinese.json
+++ b/src/languages/chinese.json
@@ -1,44 +1,43 @@
-{
-  "words": {
-    "的 de": "(possessive particle) of / really and truly / aim, clear",
-    "一	yī / yì ／yí":	"one / single / a(n)",
-    "是	shì":	"is, are, am, yes to be",
-    "不	bù": "(negative prefix) no, not",
-    "了	le／liǎo": "(modal particle intensifying preceding clause), (past tense marker) / to know, to understand, to know",
-    "rén":	"man, person, people",
-    "我	wǒ":	"I, me, myself",
-    "在	zài": "(located) at, in, exist",
-    "有	yǒu":	"to have, there is, there are, to exist, to be",
-    "他	tā":	"he, him",
-    "这	zhè":	"this / these",
-    "为	wéi / wèi":	"act as, take…to be, to be, to do, to serve as, to become / because of, for, to",
-    "之	zhī":	"him, her, it",
-    "大	dà":	"big, huge, large, major, great, wide, deep, oldest, eldest / doctor",
-    "来	lái":	"to come",
-    "以	yǐ":	"to use, take, according to, because of, in order to",
-    "个	gè": "(a measure word), individual",
-    "中	zhōng":	"within, among, in, middle, center, while (doing something), during",
-    "上	shàng":	"above, on, over, top, (go) up, last, previous",
-    "们	men": "(plural marker for pronouns and a few animate nouns)",
-    "到	dào":	"to(a place), until(a time), up to, to go, to arrive",
-    "说	shuō":	"to speak, to say",
-    "国	guó":	"country, state, nation",
-    "和	hé / huò":	"and, together, with, peace / harmony",
-    "地	de / dì - ly": "/ earth, ground, field, place, land",
-    "也	yě":	"too, also, as well",
-    "子	zǐ":	"child, son",
-    "时	shí":	"time, when, hour, period, season",
-    "道	dào":	"direction, way, method, road, path, principle, truth, reason, skill, method, Tao(of Taoism), a measure word, to say, to speak, to talk",
-    "出	chū":	"to go out, to come out, to occur, to produce, to go beyond, to rise, to put forth, to occur, to happen",
-    "而	ér":	"and, as well as, but(not), yet(not), (shows causal relation), (shows change of state), (shows contrast)",
-    "要	yào / yāo":	"vital, to want, to be going to, must / demand, ask, request",
-    "于	yú":	"at, in, in regard to",
-    "就	jiù":	"at once, then, right away, only, just",
-    "下	xià":	"below, under, (go) down, next(as opposed to previous / last)",
-    "得	dé / de / děi":	"obtain, get, gain, to have to, must, ought to, to need to",
-    "可	kě":	"can, may, able to, certain(ly), (particle used for emphasis)",
-    "你	nǐ":	"you",
-    "年	nián":	"year",
-    "生	shēng":	"to be born, to give birth, life, to grow"
-  }
-}
+[
+    {"word": "的 de", "translation": "(possessive particle) of / really and truly / aim, clear"},
+    {"word": "\u4E00\ty\u012B \/ y\u00EC \uFF0Fy\u00ED", "translation":	"one / single / a(n)"},
+    {"word": "\u662F\tsh\u00EC", "translation":	"is, are, am, yes to be"},
+    {"word": "\u4E0D\tb\u00F9", "translation": "(negative prefix) no, not"},
+    {"word": "\u4E86\tle\uFF0Fli\u01CEo", "translation": "(modal particle intensifying preceding clause), (past tense marker) / to know, to understand, to know"},
+    {"word": "rén", "translation":	"man, person, people"},
+    {"word": "\u6211\tw\u01D2", "translation":	"I, me, myself"},
+    {"word": "\u5728\tz\u00E0i", "translation": "(located) at, in, exist"},
+    {"word": "\u6709\ty\u01D2u", "translation":	"to have, there is, there are, to exist, to be"},
+    {"word": "\u4ED6\tt\u0101", "translation":	"he, him"},
+    {"word": "\u8FD9\tzh\u00E8", "translation":	"this / these"},
+    {"word": "\u4E3A\tw\u00E9i \/ w\u00E8i", "translation":	"act as, take…to be, to be, to do, to serve as, to become / because of, for, to"},
+    {"word": "\u4E4B\tzh\u012B", "translation":	"him, her, it"},
+    {"word": "\u5927\td\u00E0", "translation":	"big, huge, large, major, great, wide, deep, oldest, eldest / doctor"},
+    {"word": "\u6765\tl\u00E1i", "translation":	"to come"},
+    {"word": "\u4EE5\ty\u01D0", "translation":	"to use, take, according to, because of, in order to"},
+    {"word": "\u4E2A\tg\u00E8", "translation": "(a measure word), individual"},
+    {"word": "\u4E2D\tzh\u014Dng", "translation":	"within, among, in, middle, center, while (doing something), during"},
+    {"word": "\u4E0A\tsh\u00E0ng", "translation":	"above, on, over, top, (go) up, last, previous"},
+    {"word": "\u4EEC\tmen", "translation": "(plural marker for pronouns and a few animate nouns)"},
+    {"word": "\u5230\td\u00E0o", "translation":	"to(a place), until(a time), up to, to go, to arrive"},
+    {"word": "\u8BF4\tshu\u014D", "translation":	"to speak, to say"},
+    {"word": "\u56FD\tgu\u00F3", "translation":	"country, state, nation"},
+    {"word": "\u548C\th\u00E9 \/ hu\u00F2", "translation":	"and, together, with, peace / harmony"},
+    {"word": "\u5730\tde \/ d\u00EC - ly", "translation": "/ earth, ground, field, place, land"},
+    {"word": "\u4E5F\ty\u011B", "translation":	"too, also, as well"},
+    {"word": "\u5B50\tz\u01D0", "translation":	"child, son"},
+    {"word": "\u65F6\tsh\u00ED", "translation":	"time, when, hour, period, season"},
+    {"word": "\u9053\td\u00E0o", "translation":	"direction, way, method, road, path, principle, truth, reason, skill, method, Tao(of Taoism), a measure word, to say, to speak, to talk"},
+    {"word": "\u51FA\tch\u016B", "translation":	"to go out, to come out, to occur, to produce, to go beyond, to rise, to put forth, to occur, to happen"},
+    {"word": "\u800C\t\u00E9r", "translation":	"and, as well as, but(not), yet(not), (shows causal relation), (shows change of state), (shows contrast)"},
+    {"word": "\u8981\ty\u00E0o \/ y\u0101o", "translation":	"vital, to want, to be going to, must / demand, ask, request"},
+    {"word": "\u4E8E\ty\u00FA", "translation":	"at, in, in regard to"},
+    {"word": "\u5C31\tji\u00F9", "translation":	"at once, then, right away, only, just"},
+    {"word": "\u4E0B\txi\u00E0", "translation":	"below, under, (go) down, next(as opposed to previous / last)"},
+    {"word": "\u5F97\td\u00E9 \/ de \/ d\u011Bi", "translation":	"obtain, get, gain, to have to, must, ought to, to need to"},
+    {"word": "\u53EF\tk\u011B", "translation":	"can, may, able to, certain(ly), (particle used for emphasis)"},
+    {"word": "\u4F60\tn\u01D0", "translation":	"you"},
+    {"word": "\u5E74\tni\u00E1n", "translation":	"year"},
+    {"word": "\u751F\tsh\u0113ng", "translation":	"to be born, to give birth, life, to grow"}
+  
+]
