styling complete. Adding finishing touched'

--- a/src/languages/chinese.json
+++ b/src/languages/chinese.json
@@ -1,12 +1,12 @@
 [
-    {"word": "的 de", "translation": "(possessive particle) of / really and truly / aim, clear"},
+    {"word": "的 de", "translation": "of / really and truly / aim, clear"},
     {"word": "\u4E00\ty\u012B \/ y\u00EC \uFF0Fy\u00ED", "translation":	"one / single / a(n)"},
     {"word": "\u662F\tsh\u00EC", "translation":	"is, are, am, yes to be"},
-    {"word": "\u4E0D\tb\u00F9", "translation": "(negative prefix) no, not"},
-    {"word": "\u4E86\tle\uFF0Fli\u01CEo", "translation": "(modal particle intensifying preceding clause), (past tense marker) / to know, to understand, to know"},
+    {"word": "\u4E0D\tb\u00F9", "translation": " no, not"},
+    {"word": "\u4E86\tle\uFF0Fli\u01CEo", "translation": "to know, to understand"},
     {"word": "rén", "translation":	"man, person, people"},
     {"word": "\u6211\tw\u01D2", "translation":	"I, me, myself"},
-    {"word": "\u5728\tz\u00E0i", "translation": "(located) at, in, exist"},
+    {"word": "\u5728\tz\u00E0i", "translation": "at, in, exist"},
     {"word": "\u6709\ty\u01D2u", "translation":	"to have, there is, there are, to exist, to be"},
     {"word": "\u4ED6\tt\u0101", "translation":	"he, him"},
     {"word": "\u8FD9\tzh\u00E8", "translation":	"this / these"},
@@ -15,27 +15,27 @@
     {"word": "\u5927\td\u00E0", "translation":	"big, huge, large, major, great, wide, deep, oldest, eldest / doctor"},
     {"word": "\u6765\tl\u00E1i", "translation":	"to come"},
     {"word": "\u4EE5\ty\u01D0", "translation":	"to use, take, according to, because of, in order to"},
-    {"word": "\u4E2A\tg\u00E8", "translation": "(a measure word), individual"},
-    {"word": "\u4E2D\tzh\u014Dng", "translation":	"within, among, in, middle, center, while (doing something), during"},
-    {"word": "\u4E0A\tsh\u00E0ng", "translation":	"above, on, over, top, (go) up, last, previous"},
-    {"word": "\u4EEC\tmen", "translation": "(plural marker for pronouns and a few animate nouns)"},
-    {"word": "\u5230\td\u00E0o", "translation":	"to(a place), until(a time), up to, to go, to arrive"},
+    {"word": "\u4E2A\tg\u00E8", "translation": "individual"},
+    {"word": "\u4E2D\tzh\u014Dng", "translation":	"within, among, in, middle, center, while, during"},
+    {"word": "\u4E0A\tsh\u00E0ng", "translation":	"above, on, over, top, up, last, previous"},
+    {"word": "\u4EEC\tmen", "translation": "plural marker for pronouns and a few animate nouns"},
+    {"word": "\u5230\td\u00E0o", "translation":	"to, until, up to, to go, to arrive"},
     {"word": "\u8BF4\tshu\u014D", "translation":	"to speak, to say"},
     {"word": "\u56FD\tgu\u00F3", "translation":	"country, state, nation"},
     {"word": "\u548C\th\u00E9 \/ hu\u00F2", "translation":	"and, together, with, peace / harmony"},
-    {"word": "\u5730\tde \/ d\u00EC - ly", "translation": "/ earth, ground, field, place, land"},
+    {"word": "\u5730\tde \/ d\u00EC - ly", "translation": "earth, ground, field, place, land"},
     {"word": "\u4E5F\ty\u011B", "translation":	"too, also, as well"},
     {"word": "\u5B50\tz\u01D0", "translation":	"child, son"},
     {"word": "\u65F6\tsh\u00ED", "translation":	"time, when, hour, period, season"},
-    {"word": "\u9053\td\u00E0o", "translation":	"direction, way, method, road, path, principle, truth, reason, skill, method, Tao(of Taoism), a measure word, to say, to speak, to talk"},
+    {"word": "\u9053\td\u00E0o", "translation":	"direction, way, method, road, path, principle, truth, reason, skill, method, Tao, a measure word"},
     {"word": "\u51FA\tch\u016B", "translation":	"to go out, to come out, to occur, to produce, to go beyond, to rise, to put forth, to occur, to happen"},
-    {"word": "\u800C\t\u00E9r", "translation":	"and, as well as, but(not), yet(not), (shows causal relation), (shows change of state), (shows contrast)"},
+    {"word": "\u800C\t\u00E9r", "translation":	"and, as well as, but, yet"},
     {"word": "\u8981\ty\u00E0o \/ y\u0101o", "translation":	"vital, to want, to be going to, must / demand, ask, request"},
     {"word": "\u4E8E\ty\u00FA", "translation":	"at, in, in regard to"},
     {"word": "\u5C31\tji\u00F9", "translation":	"at once, then, right away, only, just"},
-    {"word": "\u4E0B\txi\u00E0", "translation":	"below, under, (go) down, next(as opposed to previous / last)"},
+    {"word": "\u4E0B\txi\u00E0", "translation":	"below, under, down, next"},
     {"word": "\u5F97\td\u00E9 \/ de \/ d\u011Bi", "translation":	"obtain, get, gain, to have to, must, ought to, to need to"},
-    {"word": "\u53EF\tk\u011B", "translation":	"can, may, able to, certain(ly), (particle used for emphasis)"},
+    {"word": "\u53EF\tk\u011B", "translation":	"can, may, able to, certain(ly)"},
     {"word": "\u4F60\tn\u01D0", "translation":	"you"},
     {"word": "\u5E74\tni\u00E1n", "translation":	"year"},
     {"word": "\u751F\tsh\u0113ng", "translation":	"to be born, to give birth, life, to grow"}
