--- a/src/languages/languages.json
+++ b/src/languages/languages.json
@@ -11,7 +11,7 @@
     "English": "1,278,668",
     "Spanish": "400,841",
     "Chinese": "170,427",
-    "russian": "400,841",
+    "Russian": "400,841",
     "Yiddish": "130,714"
   },
 
