--- a/src/languages/spanish.json
+++ b/src/languages/spanish.json
@@ -23,14 +23,14 @@
     {"word": "un", "translation":	"a, an"},
     {"word": "una", "translation": "a, an, one"},
     {"word": "es", "translation":	"is"},
-	  {"word": "ha", "translation":	"he/ she / it has [done something]; you(formal) have[done something]"},
+	  {"word": "ha", "translation":	"he/ she / it has; you have"},
 	  {"word": "ser", "translation":	"to be"},
-	  {"word": "son", "translation":	"they are, you(pl.) are"},
+	  {"word": "son", "translation":	"they are, you are"},
 	  {"word": "fue", "translation":	"was"},
-	  {"word": "había", "translation":	"I / he / she / it / there was(or used to be)"},
+	  {"word": "había", "translation":	"I / he / she / it / there was"},
 	  {"word": "era", "translation":	"was"},
-	  {"word": "está", "translation":		"is"},
-	  {"word": "han", "translation":	"they / you(pl.) have[done something]"},
+	  {"word": "está", "translation":	"is"},
+	  {"word": "han", "translation":	"they / you have"},
 	  {"word": "hay", "translation":	"there is / are"},
 	  {"word": "puede", "translation":	"can"},
 	  {"word": "tiene", "translation":	"has"},
