more language data

--- a/src/languages/yoruba.json
+++ b/src/languages/yoruba.json
@@ -1,50 +1,49 @@
-{
-  "words": {
-	"bi": "as",
-	"Mo" : "I",
-	"rẹ": "his",
-	"ti": "that",
-	"o si": "he",
-	"je": "was",
-	"fun": "for",
-	"lori": "on",
-	"ni o wa": "are",
-	"pẹlu": "with",
-	"ti won": "they",
-	"ki o wa ni": "be",
-	"ni": "at, have, in, is",
-	"ọkan": "one",
-	"yi": "this",
-	"lati": "from",
-	"nipa": "by",
-	"gbona": "hot",
-	"ọrọ": "word",
-	"ṣugbọn": "but",
-	"kini": "what",
-  "diẹ ninu awọn": "some",
-	"o": "it",
-	"ti o": "you",
-	"tabi": "or",
-	"ní": "had",
-	"awọn": "the",
-	"ti awọn": "of",
-	"to": "to",
-	"ati ki o": "and",
-	"kan": "a",
-	"a": "we",
-	"le": "can",
-	"jade": "out",
-	"miiran": "other",
-	"wọn": "were, their",
-	"eyi ti": "which",
-	"ṣe": "do",
-	"akoko": "time",
-	"ti o ba ti": "if",
-	"yoo": "will",
-	"Bawo": "how",
-	"wi": "said",
-	"ohun": "an",
-	"kọọkan": "each",
-	"sọ fun": "tell"
-  }
-}
+[
+	{"word": "bi", "translation": "as"},
+	{"word": "Mo", "translation" : "I"},
+	{"word": "rẹ", "translation": "his"},
+	{"word": "ti", "translation": "that"},
+	{"word": "o si", "translation": "he"},
+	{"word": "je", "translation": "was"},
+	{"word": "fun", "translation": "for"},
+	{"word": "lori", "translation": "on"},
+	{"word": "ni o wa", "translation": "are"},
+	{"word": "pẹlu", "translation": "with"},
+	{"word": "ti won", "translation": "they"},
+	{"word": "ki o wa ni", "translation": "be"},
+	{"word": "ni", "translation": "at}, have}, in}, is"},
+	{"word": "ọkan", "translation": "one"},
+	{"word": "yi", "translation": "this"},
+	{"word": "lati", "translation": "from"},
+	{"word": "nipa", "translation": "by"},
+	{"word": "gbona", "translation": "hot"},
+	{"word": "ọrọ", "translation": "word"},
+	{"word": "ṣugbọn", "translation": "but"},
+	{"word": "kini", "translation": "what"},
+  {"word": "diẹ ninu awọn", "translation": "some"},
+	{"word": "o", "translation": "it"},
+	{"word": "ti o", "translation": "you"},
+	{"word": "tabi", "translation": "or"},
+	{"word": "ní", "translation": "had"},
+	{"word": "awọn", "translation": "the"},
+	{"word": "ti awọn", "translation": "of"},
+	{"word": "to", "translation": "to"},
+	{"word": "ati ki o", "translation": "and"},
+	{"word": "kan", "translation": "a"},
+	{"word": "a", "translation": "we"},
+	{"word": "le", "translation": "can"},
+	{"word": "jade", "translation": "out"},
+	{"word": "miiran", "translation": "other"},
+	{"word": "wọn", "translation": "were}, their"},
+	{"word": "eyi ti", "translation": "which"},
+	{"word": "ṣe", "translation": "do"},
+	{"word": "akoko", "translation": "time"},
+	{"word": "ti o ba ti", "translation": "if"},
+	{"word": "yoo", "translation": "will"},
+	{"word": "Bawo", "translation": "how"},
+	{"word": "wi", "translation": "said"},
+	{"word": "ohun", "translation": "an"},
+	{"word": "kọọkan", "translation": "each"},
+	{"word": "sọ fun", "translation": "tell"}
+ 
+]
