--- a/src/languages/english.json
+++ b/src/languages/english.json
@@ -1,49 +1,49 @@
 [
-   {"word": "time", "translation": "null"},
-   {"word": "person", "translation": "null"},
-   {"word": "year", "translation": "null"},
-   {"word": "way", "translation": "null"},
-   {"word": "day", "translation": "null"},
-   {"word": "thing", "translation": "null"},
-   {"word": "man", "translation": "null"},
-   {"word": "world", "translation": "null"},
-   {"word":  "life", "translation": "null"},
-   {"word": "hand", "translation": "null"},
-   {"word": "part", "translation": "null"},
-   {"word": "child", "translation": "null"},
-   {"word": "eye", "translation": "null"},
-   {"word": "woman", "translation": "null"},
-   {"word": "place", "translation": "null"},
-   {"word": "work", "translation": "null"},
-   {"word": "week", "translation": "null"},
-   {"word": "case", "translation": "null"},
-   {"word": "point", "translation": "null"},
-   {"word": "government", "translation": "null"},
-   {"word": "company", "translation": "null"},
-   {"word": "number", "translation": "null"},
-   {"word": "group", "translation": "null"},
-   {"word": "problem", "translation": "null"},
-   {"word": "face", "translation": "null"},
-   {"word": "be", "translation": "null"},
-   {"word": "have", "translation": "null"},
-   {"word": "do", "translation": "null"},
-   {"word": "say", "translation": "null"},
-   {"word": "get", "translation": "null"},
-   {"word": "make", "translation": "null"},
-   {"word": "go", "translation": "null"},
-   {"word": "know", "translation": "null"},
-   {"word": "take", "translation": "null"},
-   {"word": "see", "translation": "null"},
-   {"word": "come", "translation": "null"},
-   {"word": "think", "translation": "null"},
-   {"word": "look", "translation": "null"},
-   {"word": "want", "translation": "null"},
-   {"word": "give", "translation": "null"},
-   {"word": "use", "translation": "null"},
-   {"word": "find", "translation": "null"},
-   {"word": "tell", "translation": "null"},
-   {"word": "ask", "translation": "null"},
-   {"word": "seem", "translation": "null"},
-   {"word": "feel", "translation": "null"},
-   {"word": "try","translation": "null"}
+   {"word": "time", "translation": ""},
+   {"word": "person", "translation": ""},
+   {"word": "year", "translation": ""},
+   {"word": "way", "translation": ""},
+   {"word": "day", "translation": ""},
+   {"word": "thing", "translation": ""},
+   {"word": "man", "translation": ""},
+   {"word": "world", "translation": ""},
+   {"word":  "life", "translation": ""},
+   {"word": "hand", "translation": ""},
+   {"word": "part", "translation": ""},
+   {"word": "child", "translation": ""},
+   {"word": "eye", "translation": ""},
+   {"word": "woman", "translation": ""},
+   {"word": "place", "translation": ""},
+   {"word": "work", "translation": ""},
+   {"word": "week", "translation": ""},
+   {"word": "case", "translation": ""},
+   {"word": "point", "translation": ""},
+   {"word": "government", "translation": ""},
+   {"word": "company", "translation": ""},
+   {"word": "number", "translation": ""},
+   {"word": "group", "translation": ""},
+   {"word": "problem", "translation": ""},
+   {"word": "face", "translation": ""},
+   {"word": "be", "translation": ""},
+   {"word": "have", "translation": ""},
+   {"word": "do", "translation": ""},
+   {"word": "say", "translation": ""},
+   {"word": "get", "translation": ""},
+   {"word": "make", "translation": ""},
+   {"word": "go", "translation": ""},
+   {"word": "know", "translation": ""},
+   {"word": "take", "translation": ""},
+   {"word": "see", "translation": ""},
+   {"word": "come", "translation": ""},
+   {"word": "think", "translation": ""},
+   {"word": "look", "translation": ""},
+   {"word": "want", "translation": ""},
+   {"word": "give", "translation": ""},
+   {"word": "use", "translation": ""},
+   {"word": "find", "translation": ""},
+   {"word": "tell", "translation": ""},
+   {"word": "ask", "translation": ""},
+   {"word": "seem", "translation": ""},
+   {"word": "feel", "translation": ""},
+   {"word": "try","translation": ""}
 ]
