--- a/src/languages/yoruba.json
+++ b/src/languages/yoruba.json
@@ -11,7 +11,7 @@
 	{"word": "pẹlu", "translation": "with"},
 	{"word": "ti won", "translation": "they"},
 	{"word": "ki o wa ni", "translation": "be"},
-	{"word": "ni", "translation": "at}, have}, in}, is"},
+	{"word": "ni", "translation": "at, have, in, is"},
 	{"word": "ọkan", "translation": "one"},
 	{"word": "yi", "translation": "this"},
 	{"word": "lati", "translation": "from"},
@@ -34,7 +34,7 @@
 	{"word": "le", "translation": "can"},
 	{"word": "jade", "translation": "out"},
 	{"word": "miiran", "translation": "other"},
-	{"word": "wọn", "translation": "were}, their"},
+	{"word": "wọn", "translation": "were, their"},
 	{"word": "eyi ti", "translation": "which"},
 	{"word": "ṣe", "translation": "do"},
 	{"word": "akoko", "translation": "time"},
